--- a/app/style/main.css
+++ b/app/style/main.css
@@ -18,6 +18,7 @@ body,
 .timer-box, .stopwatch-box, 
 .button, .toggle-btn, .icon 
 {
+	overflow: hidden;
     transition: 
 		background-color 0.3s ease-in-out, 
 		color 0.3s ease-in-out, 
